# amorce

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md
.github/workflow/: ci.yml
.github/workflows/: ci.yml
src/: main.rs
